[package]
name = "oak"
version = "0.1.0"
edition = "2021"
description = "Open Analog Keyboard"
authors = [
    "Josh Chester <numbers@oaktype.org"
]
homepage = "https://www.oaktype.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
seeeduino-xiao-rp2040 = "0.2.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.0"
ws2812-pio = "0.4.0"
smart-leds = "0.3.0"
embedded-alloc = "0.5.0"
