[package]
name = "oak"
version = "0.1.0"
edition = "2021"
description = "Open Analog Keyboard"
authors = [
    "Josh Chester <numbers@oaktype.org"
]
homepage = "https://www.oaktype.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.0"
ws2812-pio = "0.4.0"
embedded-alloc = "0.5.0"
embassy-sync = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-net", features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-futures" }
embassy-usb-logger = { version = "0.1.0", path = "D:/keyboard/embassy/embassy-usb-logger" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = "0.6.0"

[profile.release]
debug = true