[package]
name = "oak-type"
version = "0.1.0"
edition = "2021"
description = "Open Analog Keyboard"
authors = [
    "Josh Chester <numbers@oaktype.org"
]
license = "MIT"
homepage = "https://www.oaktype.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true